@@ -55,6 +55,7 @@ Jump Start Changelog
 * Fixed: Minor CSS issues with WordPress native self-hosted videos, mainly in Firefox.
 * Fixed: Description not showing with milestone ring element.
 * Fixed: Builder API function `themeblvd_add_builder_element` was outputting custom element on frontend.
+* Fixed: Browser horizontal scroll bars with "Popout" selected on Column Element in Builder.
 * The following functions have been deleted. These functions were simply action wrappers. For the most part, as long as you haven't (as suggested not to do) moved main template files header.php, footer.php, sidebar-right.php, or sidebar-left.php to your child theme, this shouldn't effect you.
 	* `themeblvd_head()`
 	* `themeblvd_before()`
